# nerdfetch-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: aur.yml  publish.yml
src/: config.rs  main.rs  modules.rs  util.rs
src/config/: default.rs  schema.rs
src/modules/: color_palette.rs  host.rs  kernel.rs  memory.rs  module.rs  os.rs  shell.rs  uptime.rs  user.rs
