[package]
name = "nerdfetch-rs"
version = "1.1.2"
authors = ["minomy13 <mail@minomy13.com>"]
edition = "2024"
description = "A minimal, fast system fetch tool - rewritten in Rust for speed, clarity, and configurability."
repository = "https://github.com/minomy13/nerdfetch-rs/"
license = "MIT"
keywords = ["bash", "zsh", "minimal", "command-line", "sysinfo"]

[dependencies]
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
color-print = "0.3.7"
sysinfo = "0.35.2"
chrono = "0.4.41"
regex = "1.11.1"
users = "0.11.0"
